添加token功能/防止同信箱註冊
