# controller/rates.go
@@ -5,10 +5,7 @@ import "github.com/gin-gonic/gin"
 // AddRate
 // @Summary 評價添加/修改
 // @Tags rates module
-// @param token body string false "token"
-// @param restaurant_id body string false "餐廳ID"
-// @param rate body float32 false "評分"
-// @param comment body string false "評論"
+// @Param {token=string,restaurant_id=string,rate=float32,comment=string} body true "評價資料"
 // @Success 200 {string} json{"code", "message"}
 // @Router /rate/addRate [post]
 func AddRate(c *gin.Context) {
@@ -18,8 +15,7 @@ func AddRate(c *gin.Context) {
 // DeleteRate
 // @Summary 刪除評價
 // @Tags rates module
-// @param token body string false "token"
-// @param rate_id body string false "評價ID"
+// @Param {rate_id=string} body true "評價ID"
 // @Success 200 {string} json{"code", "message"}
 // @Router /rate/deleteRate [delete]
 func DeleteRate(c *gin.Context) {
