# docs/swagger.json
@@ -639,6 +639,22 @@
                 }
             }
         },
+        "/user/info": {
+            "get": {
+                "tags": [
+                    "user module"
+                ],
+                "summary": "獲取用戶信息",
+                "responses": {
+                    "200": {
+                        "description": "code\", \"message\", \"user\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/login": {
             "post": {
                 "tags": [
@@ -651,13 +667,64 @@
                         "name": "user",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/models.UserBasic"
+                            "type": "object",
+                            "properties": {
+                                " password": {
+                                    "type": "string"
+                                },
+                                "email": {
+                                    "type": "string"
+                                }
+                            }
                         }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "code\", \"message\", \"token\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/register": {
+            "post": {
+                "tags": [
+                    "user module"
+                ],
+                "summary": "註冊新用戶",
+                "parameters": [
+                    {
+                        "description": "用戶登入資料",
+                        "name": "user",
+                        "in": "body",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                " name": {
+                                    "type": "string"
+                                },
+                                " password": {
+                                    "type": "string"
+                                },
+                                " phone": {
+                                    "type": "string"
+                                },
+                                " roles": {
+                                    "type": "string"
+                                },
+                                "email": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\", \"message\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -686,41 +753,6 @@
                             "type": "string"
                         }
                     }
-                }
-            }
-        }
-    },
-    "definitions": {
-        "models.UserBasic": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "description": "主鍵",
-                    "type": "string"
-                },
-                "is_disabled": {
-                    "type": "boolean"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string"
-                },
-                "restaurant_id": {
-                    "type": "string"
-                },
-                "roles": {
-                    "type": "string"
-                },
-                "verification_token": {
-                    "type": "string"
                 }
             }
         }
